feat: accesstoken & refreshtoken jwt add

--- a/MemberWebServer/appsettings.json
+++ b/MemberWebServer/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Issuer": "localhost:5222",
+    "Audience": "localhost:5005",
+    "SecretKey": "development_jwtToken_supershy_secret_key"
+  },
   "AllowedHosts": "*"
 }
